RESOLVED FIXED16495
[GTK] Accessibility support with ATK/AT-SPI
https://bugs.webkit.org/show_bug.cgi?id=16495
Summary [GTK] Accessibility support with ATK/AT-SPI
Alp Toker
Reported 2007-12-17 17:14:08 PST
The GTK+ port needs ATK/accessibility support.
Attachments
Add initial accessibility support for GTK+ with ATK (19.33 KB, patch)
2008-05-19 17:02 PDT, Alp Toker
bdakin: review+
Revised coding style suggested by andersca (19.47 KB, patch)
2008-05-19 18:07 PDT, Alp Toker
andersca: review+
AT-SPI accessibility enhancements (22.41 KB, patch)
2008-05-25 05:18 PDT, Alp Toker
andersca: review+
Alp Toker
Comment 1 2008-05-19 17:02:41 PDT
Created attachment 21241 [details] Add initial accessibility support for GTK+ with ATK There are a couple of commented out lines of code but I'd like to leave them there since they're easy to miss and need to be implemented.
Beth Dakin
Comment 2 2008-05-19 17:54:10 PDT
Comment on attachment 21241 [details] Add initial accessibility support for GTK+ with ATK Looks good!
Alp Toker
Comment 3 2008-05-19 18:07:20 PDT
Created attachment 21242 [details] Revised coding style suggested by andersca
Anders Carlsson
Comment 4 2008-05-19 18:09:32 PDT
Comment on attachment 21242 [details] Revised coding style suggested by andersca r=me
Alp Toker
Comment 5 2008-05-19 18:13:58 PDT
Landed in r33591. This will need a bit more work to provide complete accessibility support in upcoming patches.
Alp Toker
Comment 6 2008-05-25 05:07:10 PDT
Will use this as a tracking bug since people are already CC'ed.
Alp Toker
Comment 7 2008-05-25 05:18:48 PDT
Created attachment 21334 [details] AT-SPI accessibility enhancements With these changes accessibility starts to become usable. There are still many TODOs and FIXMEs.
Anders Carlsson
Comment 8 2008-05-26 09:41:03 PDT
Comment on attachment 21334 [details] AT-SPI accessibility enhancements >+// Used to provide const gchar* returns. >+static const char* returnString(String str) This should take a const String& I'm not too fond of the #if 0 and commented out code, but I think it might be OK for now. r=me
Mark Rowe (bdash)
Comment 9 2008-05-26 21:18:30 PDT
All patches associated with this bug have been landed. Please file new bugs about any remaining work that needs to be completed on this feature.
Note You need to log in before you can comment on or make changes to this bug.