2008-05-19  Alp Toker  <alp@nuanti.com>

Reviewed by Anders and Beth.

        http://bugs.webkit.org/show_bug.cgi?id=16495
        [GTK] Accessibility support with ATK/AT-SPI

        Initial ATK/AT-SPI accessibility support for the GTK+ port.


Canonical link: https://commits.webkit.org/26442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@33591 268f45cc-cd09-0410-ab3c-d52691b4dbfc